{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 495,
  "lineage": "f12dede5-0ea4-4858-0d79-5f30544b02f3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateIP1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-004349fee44d76c78",
            "association_id": "eipassoc-017cb106652a1b08b",
            "domain": "vpc",
            "id": "eipalloc-004349fee44d76c78",
            "network_border_group": "us-west-2",
            "network_interface": "eni-07d81edc88407427c",
            "private_dns": "ip-10-1-172-102.us-west-2.compute.internal",
            "private_ip": "10.1.172.102",
            "public_dns": "ec2-54-69-32-242.us-west-2.compute.amazonaws.com",
            "public_ip": "54.69.32.242",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateIP2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d797631c9ce272f3",
            "association_id": "eipassoc-09f91dd8f814a3912",
            "domain": "vpc",
            "id": "eipalloc-0d797631c9ce272f3",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0d444aecff86ddad1",
            "private_dns": "ip-10-1-234-163.us-west-2.compute.internal",
            "private_ip": "10.1.234.163",
            "public_dns": "ec2-52-12-156-148.us-west-2.compute.amazonaws.com",
            "public_ip": "52.12.156.148",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0892d3c7ee96c0bf7",
            "arn": "arn:aws:ec2:us-west-2:241707137374:instance/i-0a43e09a894a6bcb6",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a43e09a894a6bcb6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "vk-test",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0719c2162b1598ed0",
            "private_dns": "ip-10-1-1-41.us-west-2.compute.internal",
            "private_ip": "10.1.1.41",
            "public_ip": "52.39.198.156",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-038324214c02742bd",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ad37452fcf1374a2",
            "tags": {
              "Name": "terraform-test server1"
            },
            "tags_all": {
              "Name": "terraform-test server1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02fcbdfadf72f2058"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.publicsubnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02b92c281a4d3dc79",
            "arn": "arn:aws:ec2:us-west-2:241707137374:instance/i-05b4aa3ea9ac62247",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05b4aa3ea9ac62247",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "vk-test",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-063932639869cc52d",
            "private_dns": "ip-10-1-130-98.us-west-2.compute.internal",
            "private_ip": "10.1.130.98",
            "public_ip": "34.220.53.197",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-04d914a9d0741aee6",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dbdbaae391e62517",
            "tags": {
              "Name": "terraform-test server2"
            },
            "tags_all": {
              "Name": "terraform-test server2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02fcbdfadf72f2058"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.privatesubnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:241707137374:internet-gateway/igw-0b51c1a5ce7fb99d0",
            "id": "igw-0b51c1a5ce7fb99d0",
            "owner_id": "241707137374",
            "tags": {
              "Name": "Terraform VPC"
            },
            "tags_all": {
              "Name": "Terraform VPC"
            },
            "vpc_id": "vpc-077fb342c8f2f8937"
          },
          "dependencies": [
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATgw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-004349fee44d76c78",
            "connectivity_type": "public",
            "id": "nat-07c1db64523324e95",
            "network_interface_id": "eni-07d81edc88407427c",
            "private_ip": "10.1.172.102",
            "public_ip": "54.69.32.242",
            "subnet_id": "subnet-0dbdbaae391e62517"
          },
          "dependencies": [
            "aws_eip.nateIP1",
            "aws_subnet.privatesubnet1",
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATgw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d797631c9ce272f3",
            "connectivity_type": "public",
            "id": "nat-0fd8eb6c0fc591651",
            "network_interface_id": "eni-0d444aecff86ddad1",
            "private_ip": "10.1.234.163",
            "public_ip": "52.12.156.148",
            "subnet_id": "subnet-0672eb2e4c9503a64"
          },
          "dependencies": [
            "aws_eip.nateIP2",
            "aws_subnet.privatesubnet2",
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRT1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:241707137374:route-table/rtb-056a9bb1a9e93fc43",
            "id": "rtb-056a9bb1a9e93fc43",
            "owner_id": "241707137374",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07c1db64523324e95",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform VPC"
            },
            "tags_all": {
              "Name": "Terraform VPC"
            },
            "timeouts": null,
            "vpc_id": "vpc-077fb342c8f2f8937"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nateIP1",
            "aws_nat_gateway.NATgw1",
            "aws_subnet.privatesubnet1",
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRT2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:241707137374:route-table/rtb-0955a1420994191cd",
            "id": "rtb-0955a1420994191cd",
            "owner_id": "241707137374",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fd8eb6c0fc591651",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform VPC"
            },
            "tags_all": {
              "Name": "Terraform VPC"
            },
            "timeouts": null,
            "vpc_id": "vpc-077fb342c8f2f8937"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nateIP2",
            "aws_nat_gateway.NATgw2",
            "aws_subnet.privatesubnet2",
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRT1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:241707137374:route-table/rtb-04a9462baa89edeb4",
            "id": "rtb-04a9462baa89edeb4",
            "owner_id": "241707137374",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b51c1a5ce7fb99d0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform VPC"
            },
            "tags_all": {
              "Name": "Terraform VPC"
            },
            "timeouts": null,
            "vpc_id": "vpc-077fb342c8f2f8937"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW1",
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateRTassociation1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0564cf8638fbab9d7",
            "route_table_id": "rtb-056a9bb1a9e93fc43",
            "subnet_id": "subnet-0dbdbaae391e62517"
          },
          "dependencies": [
            "aws_eip.nateIP1",
            "aws_nat_gateway.NATgw1",
            "aws_route_table.PrivateRT1",
            "aws_subnet.privatesubnet1",
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateRTassociation2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cdbdf51b8c0b83d4",
            "route_table_id": "rtb-0955a1420994191cd",
            "subnet_id": "subnet-0672eb2e4c9503a64"
          },
          "dependencies": [
            "aws_eip.nateIP2",
            "aws_nat_gateway.NATgw2",
            "aws_route_table.PrivateRT2",
            "aws_subnet.privatesubnet2",
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRTassociation1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0575c31cab3b33ef4",
            "route_table_id": "rtb-04a9462baa89edeb4",
            "subnet_id": "subnet-0ad37452fcf1374a2"
          },
          "dependencies": [
            "aws_internet_gateway.IGW1",
            "aws_route_table.PublicRT1",
            "aws_subnet.publicsubnet1",
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRTassociation2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fecc10c59379c58",
            "route_table_id": "rtb-04a9462baa89edeb4",
            "subnet_id": "subnet-056391f19d2266b85"
          },
          "dependencies": [
            "aws_internet_gateway.IGW1",
            "aws_route_table.PublicRT1",
            "aws_subnet.publicsubnet2",
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:241707137374:security-group/sg-02fcbdfadf72f2058",
            "description": "Restrictions for Terraform server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02fcbdfadf72f2058",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Terraform-server-SG",
            "name_prefix": "",
            "owner_id": "241707137374",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Terraform-Server-SG"
            },
            "tags_all": {
              "Name": "Terraform-Server-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-077fb342c8f2f8937"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:241707137374:subnet/subnet-0dbdbaae391e62517",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.128.0/18",
            "id": "subnet-0dbdbaae391e62517",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241707137374",
            "tags": {
              "Name": "Terraform VPC"
            },
            "tags_all": {
              "Name": "Terraform VPC"
            },
            "vpc_id": "vpc-077fb342c8f2f8937"
          },
          "dependencies": [
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:241707137374:subnet/subnet-0672eb2e4c9503a64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.192.0/18",
            "id": "subnet-0672eb2e4c9503a64",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241707137374",
            "tags": {
              "Name": "Terraform VPC"
            },
            "tags_all": {
              "Name": "Terraform VPC"
            },
            "vpc_id": "vpc-077fb342c8f2f8937"
          },
          "dependencies": [
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:241707137374:subnet/subnet-0ad37452fcf1374a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.0.0/18",
            "id": "subnet-0ad37452fcf1374a2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241707137374",
            "tags": {
              "Name": "Terraform VPC"
            },
            "tags_all": {
              "Name": "Terraform VPC"
            },
            "vpc_id": "vpc-077fb342c8f2f8937"
          },
          "dependencies": [
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:241707137374:subnet/subnet-056391f19d2266b85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.64.0/18",
            "id": "subnet-056391f19d2266b85",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241707137374",
            "tags": {
              "Name": "Terraform VPC"
            },
            "tags_all": {
              "Name": "Terraform VPC"
            },
            "vpc_id": "vpc-077fb342c8f2f8937"
          },
          "dependencies": [
            "aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:241707137374:vpc/vpc-077fb342c8f2f8937",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0c5004cc8bc36e6bb",
            "default_route_table_id": "rtb-05a46d5e0f613572a",
            "default_security_group_id": "sg-0a8a644c1ffc339a1",
            "dhcp_options_id": "dopt-515c7728",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-077fb342c8f2f8937",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05a46d5e0f613572a",
            "owner_id": "241707137374",
            "tags": {
              "Name": "Terraform VPC"
            },
            "tags_all": {
              "Name": "Terraform VPC"
            }
          }
        }
      ]
    }
  ]
}